--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ header ul li ul li a:hover{
 }
 
 .solutions {
-	background-image: url(images/hero.jpg);
+	background-image: url(Images/hero.jpg);
 	background-size: cover;
 	height: 700px;
 }
